--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;   
 }
 body{
-    background-color: #7a7a7a;
+    background-color: #533c09;
 }
 .areaPrincipal{
     background-image: url("/img/fondo.jpg");
@@ -17,7 +17,7 @@ body{
     background-size: 100% 100%;
 }
 #Encabezado{
-    background: #2a3b49;
+    background: #d89822;
     height: 240px;
     text-align: center;
     background-image: url(/img/logo.png);
@@ -27,7 +27,7 @@ body{
 .piePagina{
     width: 100%;
     height: 100px;
-    background: #15101b;
+    background: #d89822;
     color: white;
     bottom: 0;
     position: fixed;
@@ -43,7 +43,7 @@ ul{
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333333;
+    background-color: #664c04;
 }
 li{
     float: left;
@@ -60,11 +60,11 @@ li a:hover{
 }
 #datos{
     width: 80%;
-    background-color: #88e94f;
+    background-color: #664c04;
     height: 600px;
     margin: auto;
     opacity: 1;
-    color: #2a3e55;
+    color: #111111;
     padding: 10px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
