--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,54 @@ li a:hover{
     padding: 10px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+div{
+    color: #5a4545;
+    height: "100%";
+    height: "100%";
+    padding: 20px 10px  20px 40px;
+    margin: 0px;
+    border: 1px solid #6d6a6a;
+    background-color: #493707cb;
+    border-radius: 15px;
+    border: solid 2px #6d6a6a;
+    border-radius: 15px 0px 15px 0px;
+    box-shadow: 2px 2px 5px black;
+    
+}
+.producto {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 0px;
+    text-align: center;
+    background-color: #d89822;
+    display: inline-block;
+    width: 300px;
+}
+.producto img {
+    max-width: 250px;
+    height: 180px;
+}
+table {
+    background-color: #664c04;
+    width: 100%; /* Ancho de la tabla */
+    margin: auto; /* Centrar la tabla en la página */
+    border-collapse: collapse;
+    color: black; /* Color del texto en la tabla */
+}
+th{
+    text-align: center;
+}
+/* Estilo para las celdas de la tabla */
+td {
+    border: 1px solid black; /* Bordes de las celdas */
+    padding: 10px; /* Espaciado interno */
+    text-align: justify; /* Texto centrado en las celdas */
+}
+td{
+    vertical-align: text-top;
+}
+
+h2{
+    text-align: center;
+
+}
