--- a/css/style.css
+++ b/css/style.css
@@ -75,11 +75,13 @@ div{
     padding: 20px 10px  20px 40px;
     margin: 0px;
     border: 1px solid #6d6a6a;
-    background-color: #493707cb;
     border-radius: 15px;
     border: solid 2px #6d6a6a;
     border-radius: 15px 0px 15px 0px;
-    box-shadow: 2px 2px 5px black;
+            background-color: #493707; /* Color de fondo del div */
+            box-shadow: 0 0 20px rgba(255, 0, 0, 0.7), 
+                        0 0 20px rgba(0, 255, 0, 0.7), 
+                        0 0 20px rgba(0, 0, 255, 0.7);
     
 }
 .producto {
@@ -118,4 +120,42 @@ td{
 h2{
     text-align: center;
 
+}
+.galeria {
+    display: table;
+    width: 100%;
+    border-spacing: 5px;
+    background-color: #d89822;
+}
+.fila {
+    display: table-row;
+}
+.imagen {
+    display:-ms-inline-flexbox;
+    text-align: center;
+    vertical-align: middle;
+}
+.imagen img {
+    max-width: 600px;
+    height: auto;
+    background-color: #d89822;
+}
+.descripcionG {
+    text-align: center;
+    margin-top: 5px;
+    color: #111111;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.fila{
+    color: #d89822;
+    height: 97%;
+    width: auto;
+    padding: 20px 10px  20px 40px;
+    margin: 0px;
+    border: 1px solid #6d6a6a;
+    background-color: #d89822;
+    border-radius: 15px;
+    border: solid 2px #6d6a6a;
+    border-radius: 15px 0px 15px 0px;
+    box-shadow: 2px 2px 5px black;
 }
